# Slidep

./: .eslintrc.cjs  .gitignore  .kilocodemodes  Cargo.toml  Dioxus.toml  README.md  Slidep Architecture.md  TODO-organized.md  TODO.md  constraints-details.md  epic1-stories-reorganization.md  geometric-constraints-solver-implementation-plan.md  geometric-solver-improvement-proposal.md  index.html  package-lock.json  package.json  pwa-assets.config.ts  svelte.config.js  vite.config.ts  vitest.config.ts
.claude/: settings.json
doc/: STORY-1-2-INDEX.md  adr-003-displacement-algorithm.md  architecture.md  belt-closed-diagnostic.md  belt-q-conditioning.md  belt-q-model-design.md  belt-transmission-diagnostic.md  contrainte-angle.md  defauts-connus.md  displacement-system-design.md  element-interaction-logic.md  epics.md  geometric-constraints-solver-implementation-plan.md  hover-matrix.md  mechanism-hardening-plan.md  plan-modification-stories-epics.md  prd.md  src-code-overview.md  state_management.md  story-1-2-completion-report.md  story-1-2-plan.md  todo.md  ux-design-directions.html  ux-design-specification.md
docs/: belt-constraints.md  belt-terminal-mode-free-model.md  closed-belt-disconnect-plan.md  kinematic-simulation.md  simulation-panel-ux-plan.md
scratch/: belt-q.test.ts  data.json  out.txt  q_report.md  q_system.py  report.md  vitest.scratch.config.ts
slidep-prototype/: README.md  index.html  script.js  styles.css
src/: App.tsx  index.css  main.rs  vite-env.d.ts
test-mechanisms/: Core XY modifié.slidep  Core XY.slidep  Huygen's chain drive.slidep  (+3 more)
(+171 files in other folders)
